Fixed a wrong margin-left

--- a/Binder App/css.css
+++ b/Binder App/css.css
@@ -187,7 +187,7 @@ input {
 }
 
 .hideSettings {
-	margin-left:20px;
+	margin-left:26px;
 }
 
 .inputCont, .unfocused-underline {
